# pan-place

./: .gitignore  CLAUDE.md  Cargo.toml  run.sh
frontend/: actor.html  app.js  index.html  node.html  style.css
migrations/: 0001_init.sql
src/: error.rs  lib.rs  main.rs
src/api/: actors.rs  events.rs  mod.rs  nodes.rs  query.rs
src/cli/: client.rs  identity.rs  main.rs
src/cli/commands/: confirm.rs  event.rs  history.rs  mod.rs  node.rs  presence.rs
src/crypto/: hash.rs  identity.rs  mod.rs  sign.rs
src/store/: actors.rs  events.rs  jsonl.rs  mod.rs  nodes.rs  sqlite.rs
src/types/: actor.rs  event.rs  mod.rs  node.rs
tests/: e2e_lifecycle.rs  hash_vectors.rs  storage_integration.rs
